# overly-optimized-kicktipp

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: pyproject.toml
apps/api/src/worldcup_api/: __init__.py  main.py
apps/api/src/worldcup_api/routers/: admin.py  predictions.py  tournament_tips.py
apps/api/src/worldcup_api/schemas/: predictions.py
apps/api/src/worldcup_api/services/: fixtures.py  live_ingest.py  sample_data.py  sample_predictions.py  scheduled_ingest.py  team_strength.py  tournament_tips.py
apps/api/tests/: test_fixtures.py  test_predictions.py  test_scheduled_ingest.py  test_team_strength.py
apps/web/: package.json  tailwind.config.ts
data/sample/: fixtures.json
docs/: plan.md
infra/: Dockerfile.api  Dockerfile.web  README.md  docker-compose.local.yml  docker-compose.yml  schema.sql
ml/: pyproject.toml
ml/tests/: test_live_providers.py  test_openrouter_client.py  test_tippspiel.py
ml/worldcup_model/: __init__.py
ml/worldcup_model/ai/: __init__.py  match_preview_agent.py  openrouter_client.py  schemas.py
ml/worldcup_model/data/live/: __init__.py  postgres.py  providers.py  schemas.py  snapshot.py  timeparse.py
ml/worldcup_model/data/normalize/: __init__.py  teams.py
ml/worldcup_model/evaluation/: __init__.py  metrics.py
ml/worldcup_model/jobs/: README.md  __init__.py  generate_match_preview.py  ingest_live_fixtures.py  predict.py
ml/worldcup_model/models/: elo.py  poisson.py  tippspiel.py
ml/worldcup_model/simulation/: __init__.py  tournament.py
notebooks/: README.md
(+22 files in other folders)
