[project]
name = "worldcup-model"
version = "0.1.0"
description = "Prediction, simulation, and Tipp-Spiel optimization package for WorldCupQuant."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.0",
  "numpy>=2.2.0",
  "pandas>=2.2.0",
  "polars>=1.20.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.8.0",
  "scikit-learn>=1.6.0",
  "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worldcup_model"]

[tool.ruff]
line-length = 100
target-version = "py312"
