[project]
name = "worldcup-api"
version = "0.1.0"
description = "FastAPI backend for WorldCupQuant predictions."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.8.0",
  "redis>=5.2.0",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.34.0",
  "worldcup-model",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[tool.uv.sources]
worldcup-model = { path = "../../ml", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup_api"]

[tool.ruff]
line-length = 100
target-version = "py312"
